# dxmt

./: .gitignore
libs/DXILParser/: DXILFormatConstants.hpp  DXILParser.cpp  DXILParser.hpp  meson.build
src/airconv/: airconv_internal.hpp  airconv_public.h  dxbc_converter.cpp  dxbc_converter.hpp  dxbc_converter_cfg.cpp  dxil_air_converter.cpp  dxil_converter.cpp  dxil_converter.hpp  meson.build
src/airconv/darwin/: meson.build
src/d3d11/: d3d11_buffer.cpp  d3d11_context_def.cpp  d3d11_context_imm.cpp  d3d11_device.cpp  d3d11_texture_dynamic.cpp
src/d3d12/: d3d12.cpp  d3d12.def  d3d12_agility.hpp  d3d12_command_allocator.cpp  d3d12_command_allocator.hpp  d3d12_command_list.cpp  d3d12_command_list.hpp  d3d12_command_queue.cpp  d3d12_descriptor_heap.cpp  d3d12_descriptor_heap.hpp  d3d12_device.cpp  d3d12_fence.cpp  d3d12_fence.hpp  d3d12_interfaces.hpp  d3d12_pipeline.cpp  d3d12_pipeline.hpp  d3d12_private.h  d3d12_query.cpp  d3d12_query.hpp  d3d12_resource.cpp  d3d12_resource.hpp  d3d12_root_signature.cpp  d3d12_root_signature.hpp
src/dxmt/: dxmt_buffer.cpp  dxmt_buffer.hpp  dxmt_command.cpp  dxmt_command.hpp  dxmt_command.metal  dxmt_command_queue.cpp  dxmt_command_queue.hpp  dxmt_context.cpp  dxmt_context.hpp  dxmt_presenter.cpp
src/nvapi/: nvapi_d3d12.cpp
src/nvngx/: nvngx_d3d12.cpp
src/util/: util_win32_compat.h
src/winemetal/: Metal.hpp  airconv_thunks.c  airconv_thunks.h  winemetal.h  winemetal_thunks.c
src/winemetal/unix/: winemetal_unix.c
tests/: meson.build  winemetal_unixcall_table.py
tests/dx12/: dx12_smoke.cpp
